force-app/main/default/objects/X7S_Announcement__c/X7S_Announcement__c.object-meta.xml
<CustomObject>
    <description>Object to support 7S Announcement records as part of the Announcement accelerator from 7Summits.</description>
    <label>7S Announcement</label>
    <nameField>
        <label>7S Announcement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>7S Announcements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>