force-app/main/default/objects/X7S_Announcement__c/fields/Announcement_Channel__c.field-meta.xml
<CustomField>
    <fullName>Announcement_Channel__c</fullName>
    <label>Announcement Channel</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
                <default>true</default>
                <label>Default</label>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Product Page</fullName>
            </value>
            <value>
                <fullName>Hive Home Page</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>