force-app/main/default/objects/X7S_Announcement__c/fields/Announcement_Type__c.field-meta.xml
<CustomField>
    <fullName>Announcement_Type__c</fullName>
    <description>Choose the type of announcement.</description>
    <inlineHelpText>Choose the type of announcement. Notification = general/passive, critical = severe.</inlineHelpText>
    <label>Announcement Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>info</fullName>
                <default>true</default>
                <label>Notification</label>
            </value>
            <value>
                <fullName>warning</fullName>
                <label>Alert</label>
            </value>
            <value>
                <fullName>error</fullName>
                <label>Critical</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>