force-app/main/default/objects/X7S_Announcement__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <formula>CASE(Announcement_Type__c, &quot;info&quot;, 3, &quot;warning&quot;, 2, &quot;error&quot;, 1, 3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>